--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,12 @@
 body {
   background-color: #c6fff0;
 }
+
  label {
    font-size: 25px;
  }
 
 .result {
   display: none;
+  margin-top: 30px
 }
